# game

./: README.md
actio/Lupengo/lupengo/: Makefile.am  Makefile.in  bup.sh  demo.c  joy.c  lupengo.readme  main.c  makefile.amiga
actio/Lupengo/lupengo/.deps/: attract.P  bdscoretab.P  demo.P  joy.P  play.P  sounds.P  topten.P
actio/Lupengo/lupengo/picture/: Makefile.in
actio/Lupengo/lupengo/sound/: Makefile  Makefile.am
actio/bitefusion-1.0.0-mos/BiteFusion/src/: Makefile.am  Makefile.in  configure  configure.in  error.c  image.c  images.h  main.c  makefile.mos
actio/ceferino-0.95_mos/Don Ceferino Haza_a/src/: Makefile.am  Makefile.in  audio.cpp  comojugar.cpp  comojugar.h  creditos.cpp  creditos.h  final.cpp  final.h  fuente.cpp  fuente.h  gaucho.cpp  gaucho.h  grafico.cpp  int.h  intro.cpp  intro.h  item.cpp  item.h  item_menu.cpp  item_menu.h  juego.cpp  juego.h  libgrafico.cpp  libgrafico.h  main.cpp  main_ed.cpp  main_ed.h  main_op.cpp  makefile.mos  marcas.cpp  marcas.h  menu.cpp  menu.h  mundo.cpp  mundo.h  nivel.cpp  nivel.h  procesos.cpp  procesos.h  (+2 more)
actio/kulic_os4/kulic/Source/: INSTALL  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  makefile  makefile.old
board/AmyBoardSrc/xboard-3.3.pl0/: ChangeLog  FAQ  Makefile.in  READ_ME  ToDo  acconfig.h  backend.c  backend.h  bitmaps.h  cmail.in  common.h  config.guess  config.h.in  config.sub  configure  configure.in  frontend.h  gamelist.c  ics-addresses  ics-info  moves.c  parser.c  parser.l  pgntags.c  xboard.c  xboard.h  xboard.man  xboard.texi  xboard.texinfo.in  xedittags.c  xgamelist.c
board/GnuChessSrc/gnuchess-4.0.pl75/src/: Makefile.ddj  Makefile.in  Makefile.nt  book.c  configure  configure.in  dspcom.c  eco.c  ecocvt.c  ecosort.c  game.c  gnuan.c  gnuchess.h  init.c  main.c  nondsp.c  nuxdsp.c  postprint.c  search.c  ttable.c  ttable.h  util.c  uxdsp.c  version.h
board/Knoga_OS4/Knoga_OS4/images/: Makefile.am
board/Knoga_OS4/Knoga_OS4/sounds/: Makefile.am  Makefile.in
board/mindless_os4/mindless_090_OS4/source/: Makefile.in  NEWS  aclocal.m4  config.h  config.status  configure  configure.ac  configure.lineno
board/othello-mos/othello-0.03/: ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  config.cache  config.h  config.status  configure  configure.in  othello.c
misc/Late_OS4/Late_OS4/graphics/: Makefile.am  Makefile.in
misc/MangoQuest/MangoQuest/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  MangoQuest.readme  NEWS  README  Start  TODO  config.cache  config.h  config.h.in  config.status  configure  configure.in  mangoquest.ini  notes_0.6.0.htm  notes_0.6.1.htm  notes_0.6.2.htm  notes_0.6.3.htm  notes_0.6.4.htm
misc/MangoQuest/MangoQuest/doc/: Makefile  Makefile.am  Makefile.in
misc/MangoQuest/MangoQuest/game_data/: Makefile  Makefile.am  Makefile.in
misc/MangoQuest/MangoQuest/mangopeeler/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  configure.scan
misc/MangoQuest/MangoQuest/src/: bonus.cpp  bonus.h  config_file.cpp  config_file.h  draw_scene_gl.cpp  draw_scene_gl.h  file_utils.cpp  file_utils.h
misc/gnurobbo/gnurobbo-0.57/Source/: Makefile  Makefile.am  Makefile.in  board.c  config.h  config.h.in  config.status  configure  configure.ac  data_init.c  game.c  game.h  gnurobbo.spec
race/armagetron-mos/armagetron-0.2.5.2.tgl/: .gdbinit  .infiles  CHANGELOG  Makefile  Makefile.global  Makefile.global.in  Makefile.in  acconfig.h  armagetron-mos.readme  config.h  config.h.in  config.status  config_debug  configure  configure.in  html.m4  html.m4.in  tagcvs  version.h
race/armagetron-mos/armagetron-0.2.5.2.tgl/VisualC/: Armagetron.dsp  Armagetron.dsw  Dedicated.dsp
race/armagetron-mos/armagetron-0.2.5.2.tgl/arenas/: basic.aar
race/armagetron-mos/armagetron-0.2.5.2.tgl/batch/: install  install.in  masterstarter  masterstarter.in  pushscores  pushscores.in  rcd_master  rcd_master.in  rcd_server  rcd_server.in  serverstarter  serverstarter.in  starter  stat  stat.in  uninstall  uninstall.in
race/armagetron-mos/armagetron-0.2.5.2.tgl/config/: aiplayers.cfg  aiplayers.cfg.in  default.cfg  master.srv  settings.cfg  settings_dedicated.cfg
race/armagetron-mos/armagetron-0.2.5.2.tgl/doc/: Makefile  Makefile.in  bugs.html  changelog.html  commands.html  compile.html  config.html  faq.html  index.html  install_linux.html  install_windows.html  network.html  readme_linux.html  readme_windows.html  todo.html  versions.html
shoot/Dangen/Dangen/Source/: Makefile  config.h  (+8 more)
shoot/QtoolsSrc/QtoolsSrc/: CAPABILITIES  CHANGES  Makefile.in  QUESTIONS  README  TODO  config.sub  configure  configure.in
shoot/oes/oes_1.0/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.orig  README  README_AmigaOS4.txt  TODO  config.h  config.h.in  config.status  configure  configure.ac  readme.txt
strat/dunelegacy/dunelegacy-0.95b2/: AUTHORS  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  ToDo.txt  aclocal.m4  config.status  configure  configure.ac  goconf
think/cuyo-morphos/cuyo/: Makefile  Makefile.am  Makefile.in  aclocal.m4  antarctic.ld  ascii.ld  autogen.sh  baelle.ld  bonus.ld  bunt.ld  colorshape.ld  config.h  config.h.in  config.status  configure  configure.ac  configure.lineno  darken.ld  disco.ld  ebene.ld  embroidery.ld  go.ld  go2.ld  gold.ld  hexkugeln.ld  hormone.ld  kacheln4.ld  kacheln5.ld  kunst.ld  maennchen.ld  maze.ld  memory.ld  nasenkugeln.ld  puzzle.ld  rechnen.ld  reversi.ld  reversi_brl.ld  rohre.ld  rollenspiel.ld  sdl.m4  (+8 more)
think/lgeneral-src/lgeneral-1.2beta-4/: ChangeLog  LGeneral.prj  Makefile.am  Makefile.in  README.lgc-pg  TODO  config.h.in  configure  configure.in  mkinstalldirs
think/ltris/LTris-1.0.9+/: ChangeLog  Install_LTris+  Makefile.am  Makefile.in  README  README.amiga  TODO  aclocal.m4  config.h  config.h.in  configure  configure.in
think/tutris_OS4/Tutris_OS4/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
(+57696 files in other folders)
