dnl Process this file with autoconf to produce a configure script.
AC_INIT(othello.c)
AM_INIT_AUTOMAKE(othello, 0.03)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT([Makefile])
